Update pyproject.toml and all the imports

--- a/Top_K_accuracy.ipynb
+++ b/Top_K_accuracy.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from LocalTemplate.template_decoder import *\n",
+    "from local_retro.LocalTemplate.template_decoder import *\n",
     "\n",
     "dataset = 'USPTO_50K'\n",
     "test_file = pd.read_csv('data/%s/raw_test.csv' % dataset)"
