--- a/Retrosynthesis.ipynb
+++ b/Retrosynthesis.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('scripts')\n",
-    "from Retrosynthesis import LocalRetro\n",
+    "from local_retro.Retrosynthesis import LocalRetro\n",
     "import torch"
    ]
   },
